# delivery_service

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml
app/: dependencies.py  main.py
app/api/routers/: parcels.py
app/core/: config.py
app/models/: parcel.py
app/schemes/: parcels.py
app/services/: currency_service.py  db.py  delivery_calculator.py  parcel_service.py  queue.py
app/workers/: parcel_worker.py
migrations/: env.py
migrations/versions/: 7525fcbce74d_add_initial_parcel_types.py  c806aa9d2391_initial_tables.py
new/: dependencies.py  main.py
new/api/routers/: parcels.py
new/core/: config.py
new/models/: parcel.py
new/services/: currency_service.py  db.py  parcel_service.py
new/workers/: parcel_worker.py
