[project]
name = "delivery-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.4",
    "aiohttp>=3.11.12",
    "aiomysql>=0.2.0",
    "alembic>=1.14.1",
    "black>=25.1.0",
    "cryptography>=44.0.1",
    "fastapi>=0.115.8",
    "loguru>=0.7.3",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "pymongo>=4.11.1",
    "pytest>=8.3.4",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.38",
    "sqlalchemy-utils>=0.41.2",
    "supervisor>=4.2.5",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations", "tests"]


[tool.ruff]
line-length = 119

[tool.isort]
profile = "black"

[tool.black]
line-length = 119

[tool.bandit]
exclude_dirs = ["tests", "test"]
skips = ["B101", "B104", "B105", "B106", "B107", "B108", "B110", "B112"]
